# SNEWS_Coincidence_System

./: .gitignore  .readthedocs.yaml  CS_tests.ipynb  Dockerfile  Dockerfile.coincidence_system  Dockerfile.publishing_tools  Dockerfile.snews_db_pipeline  LICENSE  README.md  dev_server_run.py  docker-compose.yml  new_CS_backend_test.ipynb  pyproject.toml  requirements.txt  server_run.py  setup.cfg  setup.py  snews_feedbacks.ipynb
.github/workflows/: firedrill.yml  tests.yml
doc/: conf.py  index.rst  requirements.txt
doc/user/: installation.md  messages.rst  protocol.rst  quickstart.md
docs/: conf.py  index.rst
docs/_static/css/: my_theme.css
docs/nb/: CS_tests.ipynb
docs/user/: Developers.md  Heartbeats.md  installation.md  quickstart.md
snews_cs/: README.md  __init__.py  __main__.py  alert_pub.py  cs_alert_schema.py  cs_director.py  cs_email.py  cs_remote_commands.py  cs_stats.py  cs_utils.py  database.py  db_schema.sql  heartbeat_feedbacks.py  hop_mgs_schema.py  hop_pub.py  requirements.txt  simulate.py  snews_bot.py  snews_coinc.py  snews_coinc_v2.py  snews_db.py  snews_format_checker.py  snews_hb.py  snews_retract.py  snews_sql.py  snews_utils.py
snews_cs/Internal Protocols/: Coincidence_OBS_protocol.rst
snews_cs/auxiliary/: contact_list.json  test-config.env
snews_cs/core/: logging.py
snews_cs/etc/: test-config.env
snews_cs/scripts/: make_detector_file.py  server_run.py
snews_cs/test/: generate_firedrill_json.py  snews_hb.py  test_00_init.py  test_01_connection_to_server.py  test_02_alert.py  test_alert.py  test_db.py  test_schema.py
